# RaceSight

./: .env.example  .gitignore  README.md  SECURITY.md  backend_run.ps1  pyproject.toml
.github/workflows/: schema-validation.yml
ai/: __init__.py  copilot_driver.py  granite_orchestrator_agent_config.embedded.json  granite_orchestrator_agent_config.json  granite_orchestrator_loader.py  granite_tool_registration.comparison.md  granite_tool_registration.plain.strict.json  granite_tool_registration.runtime.json  granite_tool_registration.runtime.strict.json  granite_tool_registration.runtime.ultrastrict.json  granite_tool_schemas.json  pit_boss.py  post_race_ai.py  pydantic_models.py  safety_ai.py  schema_usage.py  what_if_ai.py
ai/orchestrator/: __init__.py  control_loop.py  granite_client.py  routes.py  security.py
ai/prompts/: driver_prompt.txt  orchestrator_prompt.txt  outcome_prompt.txt  pit_prompt.txt  post_race_prompt.txt  safety_prompt.txt
analytics/: fatigue_model.py  outcome_projection.py  override_model.py  risk_model.py  tire_degradation.py  track_evolution.py
core/: __init__.py  race_state.py  telemetry.py
data/: live_sensor_feed.json  race_replay_sample.json
docs/: README.md  architecture.md  models.md
frontend/: graniteAxiosClient.js  index.html  package.json  script.js
main.py/: orchestrator_main.py
tests/: conftest.py  test_api_chat.py  test_control_loop.py  test_telemetry_race_state.py
tools/: granite_requests_client.py  validate_schemas.py
